@@ -70,8 +70,6 @@ int lixa_xa_open(client_status_t *cs)
         msg.header.level = LIXA_MSG_LEVEL;
         msg.header.verb = LIXA_MSG_VERB_OPEN;
         msg.header.step = 1;
-        msg.header.wait = TRUE;
-        msg.header.sync = FALSE;
 
         msg.body.open_1.client.profile = (xmlChar *)global_ccc.profile;
         msg.body.open_1.rsrmgrs = g_array_sized_new(
