@@ -89,11 +89,13 @@ const char *lixa_strerror(int ret_cod)
               return "ERROR: destination object is too small to store "
               "passed data";
             */
+        case LIXA_RC_EMPTY_XML_MSG:
+            return "ERROR: the XML message is empty";
         case LIXA_RC_MALFORMED_XML_MSG:
             return "ERROR: the XML message is malformed and cannot be "
                 "interpreted";
-        case LIXA_RC_UNKNOWN_XML_MSG_TYPE:
-            return "ERROR: the XML message type is unknown";
+        case LIXA_RC_PROPERTY_INVALID_VALUE:
+            return "ERROR: a value of a property is invalid";
         case LIXA_RC_XML_UNRECOGNIZED_TAG:
             return "ERROR: the XML contains a tag is not known or is "
                 "in the wrong place";
