@@ -46,3 +46,8 @@ different rooted path, so 3 configure options must be implemented):
 --with-libxml2-include=[DIR]
 --with-libxml2-lib=[DIR]
 *** SOLVED *** 20091030: now pkg-config is used instead of command line options
+
+2009111301
+if a server thread receives an error, some recovery action must happen
+(nowaday the listener is not informed and all the server hang when all the
+threads exited)  
